--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,700;0,900;1,700&display=swap');
+
+$body-background-color: #f7f7f7;
+$primary-color: #1ed55e;
+$secondary-color: #1b55ba;
+$border-color: #d9d9d9;
+
+$shadow-primary: rgba(40, 41, 61, 0.04);
+$shadow-secondary: rgba(96, 97, 112, 0.16);
+
+body {
+  font-family: 'Noto Sans', sans-serif;
+  background: $body-background-color;
+}
