CF-04 Created Property Detail Card
Created Property Detail Card 
Updated styles 
Created information space between Detail Card and Image Card
Updated Base Component
Updated App Module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
 <app-navigation-bar [items]="items"></app-navigation-bar>
+<div class="container mt-4" *ngIf="currentProperty">
+	<app-property-image-card [currentProperty]="currentProperty" [currentImages]="currentImages"></app-property-image-card>
+	<div class="row align-items-center mt-2 me-2 ms-2">
+		<div class="col-12 col-sm-8">
+			<h6 class="title">{{ currentProperty?.title }}</h6>
+			<p> {{ currentProperty?.address }}</p>
+		</div>
+		<div class="col-6 col-sm-2 text-center">
+			Mapa
+		</div>
+		<div class="col-6 col-sm-2 text-center price">
+			{{ currentProperty?.currency }}{{ currentProperty?.price }}
+		</div>
+	</div>
+	<app-property-detail-card [currentProperty]="currentProperty"></app-property-detail-card>
+</div>
