--- a/src/app/core/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/core/components/navigation-bar/navigation-bar.component.html
@@ -3,7 +3,7 @@
 	<!-- Attention: ids are repeated because both elements will never be shown at the same time -->
 	<div class="container-fluid d-none d-lg-flex">
 		<a class="navbar-brand" href="#">
-			<img src="assets/images/logo.png" alt="logo">
+			<img src="assets/images/logo.png" alt="logo" (error)="missingImage($event)">
 		</a>
 		
 		<div>
@@ -33,7 +33,7 @@
 	<!-- Other Devices -->
 	<div class="container-fluid d-flex d-lg-none">
 		<a class="navbar-brand" routerLink="">
-			<img src="assets/images/logo.png" alt="logo">
+			<img src="src/assets/images/logo.png" alt="logo">
 		</a>
 		
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
