--- a/src/app/core/components/navigation-bar/navigation-bar.component.scss
+++ b/src/app/core/components/navigation-bar/navigation-bar.component.scss
@@ -4,6 +4,6 @@
   border-bottom: 1px solid $border-color;
   box-shadow: 0 2px 4px $shadow-primary, 0 8px 16px $shadow-secondary;
   img {
-    width: 8rem;
+    height: 4rem;
   }
 }
