--- a/src/app/core/components/property-detail-card/property-detail-card.component.html
+++ b/src/app/core/components/property-detail-card/property-detail-card.component.html
@@ -1,8 +1,8 @@
-<div class="card pt-4 pe-4 ps-4">
+<div class="card pt-4 pe-4 ps-4 mb-5">
 	<div class="card-body">
 		
 		<h6 class="title">Descripción:</h6>
-		<p class="mt-2"> {{ currentProperty?.description }} </p>
+		<p class="mt-2" [style]="{textAlign: 'justify'}"> {{ currentProperty?.description }} </p>
 		
 		<a class="mb-5 show-more pointer no-select" (click)="showMoreDetails = !showMoreDetails">
 			Mostrar {{ showMoreDetails ? 'menos' : 'más' }}
@@ -12,9 +12,7 @@
 		<div class="dropdown-divider mt-4"></div>
 		
 		<div *ngIf="showMoreDetails" @InAndOutFaster>
-				<ng-container
-					*ngTemplateOutlet="moreDetails">
-				</ng-container>
+				<ng-container *ngTemplateOutlet="moreDetails"> </ng-container>
 			<div class="dropdown-divider"></div>
 		</div>
 
