--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,21 @@ body {
   background: $body-background-color;
 }
 
+// Utilities
+.pointer {
+  cursor:pointer;
+}
+
+.no-select {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+}
+
+//Customization
 .title{
   color: $secondary-color;
   font-weight: 600;
@@ -42,15 +57,9 @@ body {
   display:none;
 }
 
-.pointer {
-  cursor:pointer;
-}
-
-.no-select {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+.carousel-control-prev-icon, .carousel-control-next-icon {
+  background-size: 30px 30px!important;
+  background-color: $secondary-color!important;
+  border-radius: 75px 75px;
+  padding: 1.5rem;
 }
