--- a/src/app/core/components/property-image-card/property-image-card.component.html
+++ b/src/app/core/components/property-image-card/property-image-card.component.html
@@ -3,18 +3,17 @@
   <ng-container *ngTemplateOutlet="header"></ng-container>
 	
 	<div class="card-body p-0">
-    <ngb-carousel *ngIf="view === imageView" [interval]="20000000" [pauseOnHover]="true" [pauseOnFocus]="true" [showNavigationIndicators]="false" class="clase-prueba">
-      <ng-template ngbSlide *ngFor="let image of currentImages?.images; let i = index" >
-        <div class="carousel-caption d-flex align-items-center justify-content-center">
-          <div class="py-2 px-5 rounded-pill bg-black opacity-50">
-            {{ i+1 }} / {{ currentImages?.images?.length }}
-          </div>
-        </div>
-        <div class="picsum-img-wrapper">
-          <img class="d-block w-100" [src]="image" alt="slide-{{i}} description" [style]="{maxHeight: '700px'}">
-        </div>
-      </ng-template>
-    </ngb-carousel>
+    <ng-container *ngIf="view === imageView">
+      <ng-container *ngTemplateOutlet="carousel"></ng-container>
+    </ng-container>
+    <ng-container *ngIf="view === mapView">
+      <app-g-map
+        class="animate__animated animate__fadeIn animate__faster"
+        [currentProperty]="currentProperty"
+        height="700px"
+        width="100%"
+      ></app-g-map>
+    </ng-container>
 	</div>
 </div>
 
@@ -28,25 +27,16 @@
 </ng-template>
 
 <ng-template #carousel>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item" *ngFor="let image of currentImages?.images; let i = index" [ngClass]="{'active': i === 0}" data-bs-interval="100">
-        <img class="d-block w-100" [src]="image" alt="slide-{{i}}" [style]="{maxHeight: '700px'}">
+  <ngb-carousel class="animate__animated animate__fadeIn animate__faster" [interval]="20000000" [pauseOnHover]="true" [pauseOnFocus]="true" [showNavigationIndicators]="false">
+    <ng-template ngbSlide *ngFor="let image of currentImages?.images; let i = index" >
+      <div class="carousel-caption d-flex align-items-center justify-content-center">
+        <div class="py-2 px-5 rounded-pill bg-black opacity-50">
+          {{ i+1 }} / {{ currentImages?.images?.length }}
+        </div>
       </div>
-      
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon p-4 rounded-circle" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon p-4 rounded-circle" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+      <div class="picsum-img-wrapper">
+        <img class="d-block w-100" [src]="image" alt="slide-{{i}} description" [style]="{maxHeight: '800px'}">
+      </div>
+    </ng-template>
+  </ngb-carousel>
 </ng-template>
