--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,3 +63,31 @@ body {
   border-radius: 75px 75px;
   padding: 1.5rem;
 }
+
+.container-map{
+  opacity: 0.6;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: black;
+
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.map{
+  div{
+    border-radius: 10px;
+  }
+  position: relative;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.8;
+  padding-top: 20px;
+  border-radius: 10px;
+}
