--- a/src/app/core/components/property-detail-card/property-detail-card.component.html
+++ b/src/app/core/components/property-detail-card/property-detail-card.component.html
@@ -17,7 +17,7 @@
 		</div>
 
 		<div class="d-flex align-items-center justify-content-center">
-			<a routerLink="" class="py-2 px-4 btn btn-success btn-sm active" role="button" aria-pressed="true">Ver Siguiente</a>
+			<a (click)="changeProperty.emit($event)" class="py-2 px-4 btn btn-success btn-sm active" role="button" aria-pressed="true">Ver Siguiente</a>
 		</div>
 	</div>
 </div>
