--- a/src/app/core/containers/main-page/main-page.component.html
+++ b/src/app/core/containers/main-page/main-page.component.html
@@ -1,30 +1,35 @@
-<app-navigation-bar [items]="items"></app-navigation-bar>
-<div class="container mt-4" *ngIf="currentProperty">
-	
-	<app-property-image-card [currentProperty]="currentProperty" [currentImages]="currentImages" [view]="view"></app-property-image-card>
-	
-	<div class="row align-items-center my-4 me-2 ms-2">
-		<div class="col-12 col-sm-6">
-			<h6 class="title mt-4">{{ currentProperty?.title }}</h6>
-			<p> {{ currentProperty?.address }}</p>
-		</div>
-		<div class="col-6 col-sm-4 text-center p-0 container-map" (click)="changeToMap()">
-      <app-g-map
-        [currentProperty]="currentProperty"
-        mapClass="map"
-        height="110px"
-        width="100%"
-      >
-      </app-g-map>
-      <div class="text-white bg-black centered no-select" [style]="{height: '110px', width: '100%'}">
-        <fa-icon [icon]="faMapMarkerAlt" [style]="{fontSize: '1.5rem'}"></fa-icon>
-        <p class="m-0">Ver en mapa</p>
+<app-loading *ngIf="loading"></app-loading>
+
+<ng-container *ngIf="!loading">
+  <app-navigation-bar [items]="items" (changeProperty)="changeProperty()"></app-navigation-bar>
+  <div class="container mt-4" *ngIf="currentProperty">
+    
+    <app-property-image-card [currentProperty]="currentProperty" [currentImages]="currentImages" [view]="view"></app-property-image-card>
+    
+    <div class="row align-items-center my-4 me-2 ms-2">
+      <div class="col-12 col-sm-6">
+        <h6 class="title mt-4">{{ currentProperty?.title }}</h6>
+        <p> {{ currentProperty?.address }}</p>
+      </div>
+      <div class="col-6 col-sm-4 text-center p-0 container-map" (click)="changeToMap()">
+        <app-g-map
+          [currentProperty]="currentProperty"
+          mapClass="map"
+          height="110px"
+          width="100%"
+        >
+        </app-g-map>
+        <div class="text-white bg-black centered no-select" [style]="{height: '110px', width: '100%'}">
+          <fa-icon [icon]="faMapMarkerAlt" [style]="{fontSize: '1.5rem'}"></fa-icon>
+          <p class="m-0">Ver en mapa</p>
+        </div>
+      </div>
+      <div class="col-6 col-sm-2 text-center price">
+        {{ currentProperty?.currency }}{{ currentProperty?.price | thousandsPipe}}
       </div>
     </div>
-		<div class="col-6 col-sm-2 text-center price">
-			{{ currentProperty?.currency }}{{ currentProperty?.price | thousandsPipe}}
-		</div>
-	</div>
-	
-	<app-property-detail-card [currentProperty]="currentProperty" [showMoreDetails]="showMoreDetails"></app-property-detail-card>
-</div>
+    
+    <app-property-detail-card [currentProperty]="currentProperty" [showMoreDetails]="showMoreDetails" (changeProperty)="changeProperty()"></app-property-detail-card>
+  </div>
+</ng-container>
+
