CF-08 Updated last details

--- a/src/app/core/components/property-image-card/property-image-card.component.html
+++ b/src/app/core/components/property-image-card/property-image-card.component.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="picsum-img-wrapper">
-        <img class="d-block w-100" [src]="image" alt="slide-{{i}} description" [style]="{maxHeight: '800px'}">
+        <img class="d-block w-100 carousel-image" [src]="image" alt="slide-{{i}} description" [style]="{height: '600px'}">
       </div>
     </ng-template>
   </ngb-carousel>
